--- a/meowgecko/package.json
+++ b/meowgecko/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@antv/g6": "^4.8.7",
+    "@antv/g6-react-node": "^1.4.5",
     "@next/font": "13.2.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "antd": "^5.3.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
+    "pm2": "^5.3.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-d3-tree": "^3.5.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
@@ -25,5 +30,9 @@
     "suspend-button": "^0.1.1",
     "typescript": "4.9.5",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/react-modal": "^3.13.1"
   }
 }
